<resources>
    <string name="app_name">Weather App 2</string>
    <string name="zip">Zip Code:</string>
    <string name="location">Current Location: </string>
    <string name="time">Current Time: </string>
    <string name="conditions">Current Conditions: </string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="temp">Temperature</string>
    <string name="dew">Dew Point Temp</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="visiblity">Visibility</string>
    <string name="wSpeed">Wind Speed</string>
    <string name="gusts">Gusts</string>

    <!-- Dialog Strings -->
    <string name="aboutTitle">About</string>
    <string name="aboutText">Weather Data courtesy of www.weather.gov \nApp written by Emily Huizenga and Debra Jensen</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enterZipTitle">Enter a Zipcode: </string>
    <string name="unitTitle">Choose Units</string>
    <string name="pickZipTitle">Recent Searches</string>
    <string name="badZipToast">The zipcode you entered was invalid. Try again.</string>
    <string name="noInternet">You are not connected to the internet.</string>

    <!-- File String -->
    <string name="preference_file_key">weatherapp.PREFERENCE_FILE_KEY</string>

    <!--Notification Strings -->
    <string name="alertTitle">Weather Alert</string>
    <string name="alertText">There is a weather alert in your area. Click for more info.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
