<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentFragment">


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right|center_vertical">

        <TextView
            android:id="@+id/locationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:padding="10dp"
            android:text="@string/location" />

        <TextView
            android:id="@+id/timeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/time"
            android:layout_below="@+id/locationLabel"
            android:layout_toLeftOf="@+id/locationResult"
            android:layout_toStartOf="@+id/locationResult" />

        <TextView
            android:id="@+id/conditionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:layout_toRightOf="@+id/humidityLabel"
            android:padding="5dp"
            android:text="@string/conditions" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:layout_below="@+id/timeResult"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="33dp" />


        <TextView
            android:id="@+id/tempLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/temp"
            android:textStyle="bold"
            android:layout_alignTop="@+id/visibilityLabel"
            android:layout_alignLeft="@+id/tempResult"
            android:layout_alignStart="@+id/tempResult" />

        <TextView
            android:id="@+id/tempResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="--"
            android:layout_below="@+id/tempLabel"
            android:layout_alignLeft="@+id/humidityResults"
            android:layout_alignStart="@+id/humidityResults" />

        <TextView
            android:id="@+id/dewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/dew"
            android:textStyle="bold"
            android:layout_below="@+id/tempResult"
            android:layout_alignLeft="@+id/dewResult"
            android:layout_alignStart="@+id/dewResult" />

        <TextView
            android:id="@+id/dewResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="--"
            android:layout_below="@+id/dewLabel"
            android:layout_alignLeft="@+id/humidityLabel"
            android:layout_alignStart="@+id/humidityLabel" />

        <TextView
            android:id="@+id/humidityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/humidity"
            android:textStyle="bold"
            android:layout_below="@+id/dewResult"
            android:layout_alignLeft="@+id/humidityResults"
            android:layout_alignStart="@+id/humidityResults" />

        <TextView
            android:id="@+id/humidityResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="--"
            android:layout_below="@+id/humidityLabel"
            android:layout_alignLeft="@+id/pressureLabel"
            android:layout_alignStart="@+id/pressureLabel" />

        <TextView
            android:id="@+id/pressureLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/pressure"
            android:textStyle="bold"
            android:layout_below="@+id/humidityResults"
            android:layout_alignLeft="@+id/pressureResult"
            android:layout_alignStart="@+id/pressureResult" />

        <TextView
            android:id="@+id/pressureResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="--"
            android:layout_below="@+id/pressureLabel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="23dp"
            android:layout_marginStart="23dp" />

        <TextView
            android:id="@+id/visibilityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/visiblity"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/conditionLabel"
            android:layout_toEndOf="@+id/conditionLabel" />

        <TextView
            android:id="@+id/wSpeedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/wSpeed"
            android:textStyle="bold"
            android:layout_below="@+id/visibilityResult"
            android:layout_alignLeft="@+id/visibilityResult"
            android:layout_alignStart="@+id/visibilityResult" />

        <TextView
            android:id="@+id/visibilityResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="--"
            android:layout_above="@+id/dewLabel"
            android:layout_alignLeft="@+id/visibilityLabel"
            android:layout_alignStart="@+id/visibilityLabel" />

        <TextView
            android:id="@+id/gustLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/windResult"
            android:layout_alignStart="@+id/windResult"
            android:layout_below="@+id/windResult"
            android:paddingRight="10dp"
            android:text="@string/gusts"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gustResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/windResult"
            android:layout_below="@+id/gustLabel"
            android:paddingRight="10dp"
            android:text="--" />

        <TextView
            android:id="@+id/locationResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/locationLabel"
            android:layout_toRightOf="@+id/locationLabel"
            android:padding="10dp"
            android:text="--" />

        <TextView
            android:id="@+id/timeResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/locationLabel"
            android:layout_toEndOf="@+id/timeLabel"
            android:layout_toRightOf="@+id/timeLabel"
            android:padding="10dp"
            android:text="--" />

        <TextView
            android:id="@+id/conditionResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/conditionLabel"
            android:layout_toEndOf="@+id/conditionLabel"
            android:layout_toRightOf="@+id/conditionLabel"
            android:padding="5dp"
            android:text="--"
            android:layout_above="@+id/visibilityLabel" />

        <TextView
            android:id="@+id/windResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/wSpeedLabel"
            android:layout_alignStart="@+id/wSpeedLabel"
            android:layout_alignTop="@+id/dewResult"
            android:text="--" />

    </RelativeLayout>

</FrameLayout>
